# sfml-bounceball

./: .gitignore  CMakeLists.txt
assets/: stageStatus.txt  stages.json
include/: Ball.hpp  Block.hpp  Button.hpp  StageManager.hpp
src/: Ball.cpp  Block.cpp  Button.cpp  StageManager.cpp  main.cpp
